<resources>
    <string name="app_name">Vi Safe</string>
    <string name="text_error_required">Required</string>
    <string name="text_error_not_match_regex_default">Invalid data</string>
    <string name="check_double_click_exit_app">Please click BACK again to exit</string>
    <string name="warning_check_server_again">Could not connect to server. Please try again!</string>
    <string name="error_system_msg">The system is under maintenance. Please come back later!</string>
    <string name="error_system_msg_503">Service Temporarily Unavailable</string>
    <string name="error_internet_connect">Internet connection failed. Please check Wifi/3G/4G connection.</string>
    <string name="error_title">Error</string>
    <string name="ACTION_CLOSE">Close</string>
    <string name="ACTION_UPDATE">Update</string>
    <string name="ACTION_SKIP">Skip</string>
    <string name="ACTION_WANT">Want</string>
    <string name="ACTION_RETRY">Retry</string>
    <string name="ACTION_CANCEL">Cancel</string>
    <string name="ACTION_NO">No</string>
    <string name="ACTION_YES">Yes</string>
    <string name="ACTION_OK">OK</string>
    <string name="text_number_phone">Number phone</string>
    <string name="text_password">Password</string>
    <string name="text_forget_password">Forget Password?</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_in_with">Or  Sign In with</string>
    <string name="text_please_enter_phone_number">Please enter phone number</string>
    <string name="text_phone_incorrect">Số điện thoại không hợp lệ</string>
    <string name="text_error_empty_pass">Please enter password</string>
    <string name="text_notify">Thông báo</string>
    <string name="text_name">Name</string>
    <string name="text_sign_up">Create Account</string>
    <string name="text_sign_in_with_another_account">Sing in with another account</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_google">Google</string>
    <string name="text_have_account">Already have account? <font color="#1d5bfa">Sign in </font></string>
    <string name="text_welcome_back">Welcome Back</string>
    <string name="text_let_get_started">Let\'s get started</string>
    <string name="text_sign_up_for_login">Sign up</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_please_choose_role">Please choose your role</string>
    <string name="text_role_policy">Police</string>
    <string name="text_role_civil_defense">Civil defense</string>
    <string name="text_role_street_bodyguard">Street  bodyguard</string>
    <string name="text_role_hospital">Hospital</string>
    <string name="text_role_fire_fight">Fire fight</string>
    <string name="text_please_enter_name">Vui lòng nhập họ tên</string>
    <string name="msg_need_permission">Permissions are need for application.</string>
    <string name="mgs_open_location">"To continue, please turn on your device's location"</string>
    <string name="mapbox_access_token">MAPBOX_ACCESS_TOKEN</string>
    <string name="text_new_user">New user?<font color="#1d5bfa"> Sign Up</font></string>
    <string name="text_enter_your_location">Enter your location</string>
    <string name="text_error_write_perm_required">Permission of writing files is required</string>
    <string name="text_contacts_list">Contact List</string>
    <string name="text_search_your_family">Search your family…</string>
    <string name="text_title_name">Name:</string>
    <string name="text_title_phone">Phone:</string>
    <string name="text_warning_accept_contact">Bạn có muốn thêm liên hệ này thành người cứu trợ ?</string>
    <string name="text_notify_has_been_send">Notification has been sent</string>
    <string name="text_please_choose_person_support">Vui lòng lựa chọn người hỗ trợ</string>
    <string name="text_the_system_will_send_emergency_alarm_to">The system will send emergency alarm to</string>
    <string name="text_immediate_alarm">Immediate alarm</string>
    <string name="text_total_person_supprort">Your family (%d)</string>
    <string name="text_today">Today</string>
    <string name="text_send_now">Send now</string>
    <string name="text_which_one_you_want_to_choose">Which one you want to choose?</string>
    <string name="text_settings">Setting</string>
    <string name="text_role_settings">Role settings</string>
    <string name="text_alarm">Alarm</string>
    <string name="text_register_personal_profile_settings">Register to create a personal profile</string>
    <string name="text_rate_us">Rate us</string>
    <string name="text_help">Help</string>
    <string name="text_logout">Log out</string>
    <string name="text_settings_role">Role settings</string>
    <string name="text_alerts_will_be_sent_to_the_following_group_of_people_at_the_nearest_location">Alerts will be sent to the following group of people at the nearest location</string>
</resources>