<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/text_let_get_started"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_28sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/text_name"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_15sp" />

    <LinearLayout
        android:background="@drawable/iv_rounder_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60dp"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:layout_marginEnd="@dimen/spacing_24dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/semi_regular"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/spacing_14dp"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_15sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_18dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/text_number_phone"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_15sp" />

    <LinearLayout
        android:background="@drawable/iv_rounder_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60dp"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:layout_marginEnd="@dimen/spacing_24dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/semi_regular"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/spacing_14dp"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_15sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_18dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/text_password"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_15sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/iv_rounder_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60dp"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:layout_marginEnd="@dimen/spacing_24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="@font/semi_regular"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="@dimen/spacing_14dp"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivHidden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_20dp"
            app:layout_constraintBottom_toBottomOf="@id/edtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edtPassword"
            app:srcCompat="@drawable/ic_orion_hidden_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_40dp"
        android:layout_marginEnd="@dimen/spacing_24dp"
        android:background="@drawable/bg_rectange_c4_0176d8"
        android:fontFamily="@font/semi_regular"
        android:text="@string/text_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_32dp"
        android:fontFamily="@font/semi_regular"
        android:text="@string/text_sign_in_with_another_account"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_18dp"
        android:layout_marginEnd="@dimen/spacing_24dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rectange_c4_3a559f">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginStart="@dimen/spacing_20dp"
                app:srcCompat="@drawable/ic_facebook"
                android:id="@+id/ivFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvFacebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvFacebook" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semi_regular"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_14dp"
                android:paddingBottom="@dimen/spacing_14dp"
                android:text="@string/text_facebook"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/text_15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivFacebook"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rectange_c4_f14436">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginStart="@dimen/spacing_20dp"
                app:srcCompat="@drawable/ic_google"
                android:id="@+id/ivGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvGoogle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvGoogle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semi_regular"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_24dp"
                android:paddingTop="@dimen/spacing_14dp"
                android:paddingEnd="@dimen/spacing_24dp"
                android:paddingBottom="@dimen/spacing_14dp"
                android:text="@string/text_google"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/text_15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivGoogle"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_18dp"
        android:fontFamily="@font/semi_regular"
        android:text="@string/text_have_account"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>